product_docs/docs/eprs/6.2/10_appendix/04_miscellaneous_xdb_processing_topics/01_publications_and_subscriptions_server_conf_options/04_replicate_oracle_partitioned_tables.mdx
---
title: "Replicating Oracle Partitioned Tables"
---

<div id="replicate_oracle_partitioned_tables" class="registered_link"></div>


<div class="note">

<div class="title">

Note

</div>

The option described in this section must be set to the same value for both the publication server and the subscription server.

</div>

<div class="note">

<div class="title">

Note

</div>

This feature applies only for subscriptions in an Advanced Server database. It does not apply to subscriptions in a PostgreSQL database.

</div>

In Oracle, table partitioning provides the capability to store table rows in different physical locations (tablespaces) according to a rule defined on the table.

The most common types of Oracle table partitioning are the following:

-   Range Partitioning. Ranges of values defined on a column determine which tablespace a row is stored.
-   List Partitioning. A list of values defined on a column determines which tablespace a row is stored.
-   Hash Partitioning. An algorithm on a column generates a hash key, which determines which tablespace a row is stored.

<div class="note">

<div class="title">

Note

</div>

If you are using Advanced Server, table partitioning using Oracle compatible table partitioning syntax is an available feature. See the section on table partitioning in the Database Compatibility for Oracle Developer’s Guide for information. See [Replicating Postgres Partitioned Tables](../../../07_common_operations/#replicating_postgres_partitioned_tables) for information on including Postgres partitioned tables in a replication system. The `importPartitionAsTable` option described in this section applies only to table partitioning in an Oracle database.

</div>

The `importPartitionAsTable` option controls what happens when an Oracle partitioned table is part of the publication.

`importPartitionAsTable={true | false}`

The default value is `false`.

Depending upon the Oracle partitioned table type and the setting of the `importPartitionAsTable` option one of the following may occur:

-   A set of inherited tables is created in Advanced Server to which the Oracle partitioned table is replicated. The rows can be stored in different physical locations.
-   A plain, single table with no inheritance is created in Advanced Server to which the Oracle partitioned table is replicated. All rows are stored in one physical location.
-   No table is created in Advanced Server for the Oracle partitioned table, and an error message is written to the Migration Toolkit log file.

When `importPartitionAsTable=false` (the default setting), the following occurs:

-   A list partitioned table is replicated as a set of inherited Advanced Server tables.
-   A range partitioned table is replicated as a set of inherited Advanced Server tables.
-   A hash partitioned table is not replicated to Advanced Server, and an error message is written to the Migration Toolkit log file.

<div class="note">

<div class="title">

Note

</div>

If there are subscription tables created as sets of Advanced Server inherited tables, then you must also set the `enableConstBeforeDataLoad` option in the publication server configuration file to true. See [Specifying a Custom URL for an Oracle JDBC Connection](../../../10_appendix/04_miscellaneous_xdb_processing_topics/01_publications_and_subscriptions_server_conf_options/#specify_custom_url_for_oracle_jdbc) for information on the `enableConstBeforeDataLoad` option.

</div>

When `importPartitionAsTable=true`, the following occurs:

-   A list partitioned table is replicated as a single Advanced Server table with no inheritance.
-   A range partitioned table is replicated as a single Advanced Server table with no inheritance.
-   A hash partitioned table is replicated as a single Advanced Server table with no inheritance.

Setting the `importPartitionAsTable` option to true allows you to replicate a broader range of Oracle partitioned table types, but as normal Advanced Server tables without simulating partitions by using inheritance.
